fix(monitoring): Prometheus 메모리 증가 (OOMKilled 방지)
- WAL 로드 시 메모리 부족으로 OOMKilled 발생 (Exit Code 137)
- memory limit: 512Mi → 1Gi

--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -353,6 +353,13 @@ prometheus:
   config:
     externalUrl: "https://dev.wealist.co.kr/api/monitoring/prometheus"
     routePrefix: "/api/monitoring/prometheus"
+  resources:
+    requests:
+      cpu: 100m
+      memory: 512Mi
+    limits:
+      cpu: 1
+      memory: 1Gi  # WAL 로드 시 OOMKilled 방지
   persistence:
     enabled: true
     hostPath:
