--- a/docker/monitoring/prometheus/prometheus.yml
+++ b/docker/monitoring/prometheus/prometheus.yml
@@ -22,7 +22,7 @@ scrape_configs:
       - targets: ['localhost:9090']
 
   # ==========================================================================
-  # Go Services (user, board, chat, noti, storage, video)
+  # Go Services (user, board, chat, noti, storage)
   # ==========================================================================
   - job_name: 'user-service'
     static_configs:
@@ -47,11 +47,6 @@ scrape_configs:
   - job_name: 'storage-service'
     static_configs:
       - targets: ['storage-service:8003']
-    metrics_path: '/metrics'
-
-  - job_name: 'video-service'
-    static_configs:
-      - targets: ['video-service:8004']
     metrics_path: '/metrics'
 
   # ==========================================================================
