--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -436,18 +436,20 @@ redisExporter:
 # 호스트 PostgreSQL에 wealist DB가 있어야 함
 
 # -----------------------------------------------------------------------------
-# Multi-pod Replica Configuration (JWT stateless 테스트용)
+# Service Configuration
 # -----------------------------------------------------------------------------
+# TODO: Multi-pod OAuth2 세션 이슈 해결 후 replicaCount: 2로 변경
+# 현재 Spring Session Redis가 제대로 동작하지 않아 OAuth 로그인 실패
 auth-service:
-  replicaCount: 2
+  replicaCount: 1
 
 board-service:
-  replicaCount: 2
+  replicaCount: 1
   config:
     DB_NAME: "wealist"
 
 user-service:
-  replicaCount: 2
+  replicaCount: 1
   config:
     DB_NAME: "wealist"
 
