--- a/k8s/argocd/apps/prod/ops-service.yaml
+++ b/k8s/argocd/apps/prod/ops-service.yaml
@@ -35,6 +35,11 @@ spec:
         # ops-service는 Istio RequestAuthentication이 없으므로 직접 JWT 검증
         - name: config.ISTIO_JWT_MODE
           value: "false"
+        # Prometheus metrics configuration
+        - name: config.PROMETHEUS_URL
+          value: "http://prometheus.wealist-prod.svc.cluster.local:9090"
+        - name: config.PROMETHEUS_NAMESPACE
+          value: "wealist-prod"
   destination:
     server: https://kubernetes.default.svc
     namespace: wealist-prod
