ops-service 는 auto migration 활성화

--- a/k8s/argocd/apps/prod/ops-service.yaml
+++ b/k8s/argocd/apps/prod/ops-service.yaml
@@ -40,6 +40,9 @@ spec:
           value: "http://prometheus.wealist-prod.svc.cluster.local:9090"
         - name: config.PROMETHEUS_NAMESPACE
           value: "wealist-prod"
+        # Database auto-migration (내부 관리 도구이므로 활성화)
+        - name: config.DB_AUTO_MIGRATE
+          value: "true"
   destination:
     server: https://kubernetes.default.svc
     namespace: wealist-prod
