--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -136,6 +136,7 @@ shared:
     # Redis
     REDIS_HOST: "redis"
     REDIS_PASSWORD: ""
+    REDIS_URL: "redis://redis:6379/1"
     SPRING_REDIS_HOST: "redis"
     SPRING_REDIS_PASSWORD: ""
     # Auth
