feat(infra): add ECR token auto-refresher CronJob for kind cluster
- ECR 토큰 12시간 만료 → 6시간마다 자동 갱신
- dev.yaml에 ecrTokenRefresher 활성화
- argocd-config-dev에서 apps/dev 경로 롤백 (prune 이슈)

사전 요구사항:
kubectl create secret generic aws-credentials \
  --from-literal=AWS_ACCESS_KEY_ID=<key> \
  --from-literal=AWS_SECRET_ACCESS_KEY=<secret> \
  -n wealist-dev

--- a/k8s/helm/charts/wealist-infrastructure/values.yaml
+++ b/k8s/helm/charts/wealist-infrastructure/values.yaml
@@ -175,4 +175,11 @@ ingress:
   # Default: no TLS (override in environment files)
   tls: []
 
-
+# ECR Token Refresher CronJob (for kind/dev environments)
+# Automatically refreshes ECR token every 6 hours (token expires in 12 hours)
+ecrTokenRefresher:
+  enabled: false  # Enable in dev.yaml
+  awsSecretName: "aws-credentials"  # Secret containing AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY
+  secretName: "ecr-secret"  # Name of docker-registry secret to create/update
+  ecrRegistry: "290008131187.dkr.ecr.ap-northeast-2.amazonaws.com"
+  awsRegion: "ap-northeast-2"
