fix(ci): use dev-latest tag instead of latest
CI now pushes dev-latest tag for dev environment builds.
This matches ArgoCD app configuration which expects dev-latest.

--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -350,7 +350,7 @@ jobs:
           if [ "${ENV}" = "prod" ]; then
             TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG}"
           else
-            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG},${ECR_REGISTRY}/${REPO_NAME}:latest"
+            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG},${ECR_REGISTRY}/${REPO_NAME}:dev-latest"
           fi
           echo "all_tags=${TAGS}" >> $GITHUB_OUTPUT
 
