fix(argocd): use latest tag instead of dev-latest
ECR already uses 'latest' tag for dev environment.
Changed ArgoCD apps and CI to match existing convention.

--- a/k8s/argocd/apps/dev/user-service.yaml
+++ b/k8s/argocd/apps/dev/user-service.yaml
@@ -25,7 +25,7 @@ spec:
         - name: image.repository
           value: "user-service"
         - name: image.tag
-          value: "dev-latest"
+          value: "latest"
         - name: imagePullSecrets[0].name
           value: "ecr-secret"
         - name: shared.config.DB_HOST
