--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -350,7 +350,7 @@ jobs:
           if [ "${ENV}" = "prod" ]; then
             TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG}"
           else
-            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG},${ECR_REGISTRY}/${REPO_NAME}:dev-latest"
+            TAGS="${ECR_REGISTRY}/${REPO_NAME}:${TAG},${ECR_REGISTRY}/${REPO_NAME}:latest"
           fi
           echo "all_tags=${TAGS}" >> $GITHUB_OUTPUT
 
