--- a/k8s/argocd/apps/dev/auth-service.yaml
+++ b/k8s/argocd/apps/dev/auth-service.yaml
@@ -25,7 +25,7 @@ spec:
         - name: image.repository
           value: "auth-service"
         - name: image.tag
-          value: "dev-latest"
+          value: "latest"
         - name: imagePullSecrets[0].name
           value: "ecr-secret"
         - name: shared.config.DB_HOST
