--- a/k8s/helm/charts/storage-service/templates/deployment.yaml
+++ b/k8s/helm/charts/storage-service/templates/deployment.yaml
@@ -31,6 +31,10 @@ spec:
         {{- include "wealist-common.selectorLabels" . | nindent 8 }}
         {{/* Version label for DestinationRule subset matching */}}
         version: stable
+        {{/* Additional pod labels (e.g., stage: prod for Kyverno policy) */}}
+        {{- if .Values.podLabels }}
+        {{- toYaml .Values.podLabels | nindent 8 }}
+        {{- end }}
       annotations:
         {{- if .Values.podAnnotations }}
         {{- toYaml .Values.podAnnotations | nindent 8 }}
