--- a/k8s/helm/charts/user-service/templates/deployment.yaml
+++ b/k8s/helm/charts/user-service/templates/deployment.yaml
@@ -29,6 +29,10 @@ spec:
     metadata:
       labels:
         {{- include "wealist-common.selectorLabels" . | nindent 8 }}
+        {{/* Additional pod labels (e.g., stage: prod for Kyverno policy) */}}
+        {{- if .Values.podLabels }}
+        {{- toYaml .Values.podLabels | nindent 8 }}
+        {{- end }}
       annotations:
         {{- if .Values.podAnnotations }}
         {{- toYaml .Values.podAnnotations | nindent 8 }}
