fix(k6): disable native histograms for Prometheus compatibility
- K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM: true → false
- Prometheus에서 native histograms 미활성화 상태라 500 에러 발생

--- a/k8s/helm/charts/wealist-monitoring/templates/k6/job.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/k6/job.yaml
@@ -43,7 +43,7 @@ spec:
                 - name: K6_PROMETHEUS_RW_SERVER_URL
                   value: {{ .Values.k6.prometheus.remoteWriteUrl }}
                 - name: K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM
-                  value: "true"
+                  value: "false"
                 - name: BASE_URL
                   value: {{ .Values.k6.endpoints.baseUrl | default "http://istio-ingressgateway.istio-system.svc.cluster.local" }}
                 - name: SVC_PREFIX
@@ -100,7 +100,7 @@ spec:
                 - name: K6_PROMETHEUS_RW_SERVER_URL
                   value: {{ .Values.k6.prometheus.remoteWriteUrl }}
                 - name: K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM
-                  value: "true"
+                  value: "false"
                 - name: BASE_URL
                   value: {{ .Values.k6.endpoints.baseUrl | default "http://istio-ingressgateway.istio-system.svc.cluster.local" }}
                 - name: SVC_PREFIX
@@ -162,7 +162,7 @@ spec:
                 - name: K6_PROMETHEUS_RW_SERVER_URL
                   value: {{ .Values.k6.prometheus.remoteWriteUrl }}
                 - name: K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM
-                  value: "true"
+                  value: "false"
                 - name: BASE_URL
                   value: {{ .Values.k6.endpoints.baseUrl | default "http://istio-ingressgateway.istio-system.svc.cluster.local" }}
                 - name: SVC_PREFIX
