--- a/k8s/argocd/base/external-secrets/dev/external-secret-shared.yaml
+++ b/k8s/argocd/base/external-secrets/dev/external-secret-shared.yaml
@@ -115,6 +115,7 @@ spec:
     - secretKey: INTERNAL_API_KEY
       remoteRef:
         key: "wealist/dev/app/internal-api-key"
+        property: internal_api_key
 
     # -------------------------------------------------------------------------
     # OAuth2 Google
