--- a/services/frontend/tsconfig.json
+++ b/services/frontend/tsconfig.json
@@ -26,8 +26,7 @@
     "esModuleInterop": true,
     //
 
-    "types": [],
-    "typeRoots": []
+    "types": ["vite/client"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
